src/containers/Storage/StorageNodes/StorageNodes.scss
.global-storage-nodes {
    &__pdisks-wrapper {
        display: flex;
        overflow-x: auto;
        overflow-y: hidden;
        justify-content: center;

        min-width: 500px;
    }
    &__pdisks-item {
        flex-grow: 1;

        max-width: 200px;
        margin-right: 10px;

        &:last-child {
            margin-right: 0px;
        }
    }
    &__fqdn-wrapper {
        width: 330px;
    }
    &__fqdn {
        display: inline-block;
        overflow: hidden;

        max-width: 330px;

        vertical-align: top;
        text-overflow: ellipsis;
    }
    &__group-id {
        font-weight: 500;
    }
}

